@@ -31,6 +31,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6312: Fixed http HEAD request when the transfer encoding is chunked.
+  It should correctly return an empty response now.
+
 - Issue #7490: to facilitate sharing of doctests between 2.x and 3.x test
   suites, the IGNORE_EXCEPTION_DETAIL directive now also ignores the module
   location of the raised exception. Based on initial patch by Lennart
